icon color changed to grey for contrast correction

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -122,7 +122,7 @@ header {
 
 #why-book-me h3 {
     text-color: #000000;
-    font-weight:700;
+    font-weight:  700;
 }
 
 #why-book-me h4 {
@@ -150,7 +150,7 @@ header {
 
     font-size: 40px;
     margin-bottom: 20px;
-    color: #ff0634;
+    color: #979797;
 }
 
 .why-book-me-title {
@@ -396,7 +396,6 @@ video {
 @media (min-width: 320px) and (max-width: 480px) {
 
     /*-----index.html-----*/
-    
     #why-book-me h4 {
         margin-bottom: 10px;
     }
@@ -443,4 +442,12 @@ video {
         margin: 0 auto;
     }
 
-}
+    #navbarNavDropdown {
+        margin-right: 20px;
+    }
+
+
+
+    .navbar-toggler {
+        margin-right: 15px;
+    }}
